Fixing some more mobile layout issues

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -226,8 +226,8 @@ pre {
     @extend %clearfix;
 
     @include media-query($on-laptop) {
-        padding-right: $spacing-unit / 2;
-        padding-left: $spacing-unit / 2;
+        padding-right: 10px;
+        padding-left: 10px;
     }
 }
 
